--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             </select>
         </div>
     </div>
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
