Got basic English voice working.

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <div class="input-container">
         <input type="text" id="userInput" placeholder="Type a message..."/>
         <button id="sendButton" onclick="sendMessage()">Send</button>
+        <button id="voiceButton">Voice</button>
         <!-- Place the model selection here -->
         <div class="dropdown-container">
             <label for="modeDropdown">Select Mode:</label>
