--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
 </head>
 <body>
-<h1>KarstenBot 69</h1>
+<h1>Rosetta - the Language Tutor</h1>
 <div class="chat-container">
     <div id="chatbox" class="chatbox"></div>
     <div class="input-container">
